--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-{\rtf1}
+<!DOCTYPE html>
+<html lang="en-us">
+<head>
+  <meta charset="UTF-8">
+  <title>Nikita Patel</title>
+</head>
+
+<body>
+
+  <h1>Nikita Patel</h1>
+
+  <img src="https://avatars3.githubusercontent.com/u/33210512?s=460&v=4" alt="Nikita Patel">
+
+  <p>I am currently a Test Engineer at an Electronics Company who is really interested in Data science</p>
+  
+
+  <ul>
+    <li><strong>Email:</strong> <a href="#">nikita.patel1228@gmail.com</a></li>
+    <li><strong>Github:</strong> <a href="#">nix1228</a></li>
+    <li><strong>LinkedIn:</strong> <a href="#">https://www.linkedin.com/in/nikitapatel1228/</a></li>
+  </ul>
+
+
+</body>
+
+</html>
